--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #579ed6;
+      background-color: ##fff0cc;
       font-family: "Helvetica,Arial,FreeSans";
       color: #000000;
     }
@@ -62,7 +62,18 @@ MTStatusBarOverlay currently fully supports two different status bar styles, whi
 * UIStatusBarStyleBlackOpaque</p><h2>License</h2>
 <p>MIT</p>
 <h2>Authors</h2>
-<p>Matthias Tretter (matthias.tretter@gmail.com)<br/><br/>Thanks to all contributors:<br/>--------------------------------------------------------<br/>Benjamin Scott (ben@numbersix.org)<br/>Matt Coneybeare (coneybeare@gmail.com)<br/>Tomasz Krasnyk (krt@coresystems.ch)<br/>Max Howell (max@methylblue.com)<br/>Peter Steinberger (me@petersteinberger.com)<br/>Tyler Hall (thall@mercuryintermedia.com)<br/><br/>      </p>
+<p>Matthias Tretter (matthias.tretter@gmail.com)
+<br/>
+<br/>Thanks to all contributors:
+<br/>--------------------------------------------------------
+<br/>Benjamin Scott (ben@numbersix.org)
+<br/>Matt Coneybeare (coneybeare@gmail.com)
+<br/>Tomasz Krasnyk (krt@coresystems.ch)
+<br/>Max Howell (max@methylblue.com)
+<br/>Peter Steinberger (me@petersteinberger.com)
+<br/>Tyler Hall (thall@mercuryintermedia.com)
+<br/>
+<br/>      </p>
 
 
     <h2>Download</h2>
