--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@ MTStatusBarOverlay currently fully supports two different status bar styles, whi
 * UIStatusBarStyleBlackOpaque</p><h2>License</h2>
 <p>MIT</p>
 <h2>Authors</h2>
-<p>Matthias Tretter (matthias.tretter@gmail.com)
+<p><b>Matthias Tretter (@myell0w)</b>
 <br/>
 <br/>Thanks to all contributors:
 <br/>--------------------------------------------------------
-<br/>Benjamin Scott (ben@numbersix.org)
-<br/>Matt Coneybeare (coneybeare@gmail.com)
-<br/>Tomasz Krasnyk (krt@coresystems.ch)
-<br/>Max Howell (max@methylblue.com)
-<br/>Peter Steinberger (me@petersteinberger.com)
-<br/>Tyler Hall (thall@mercuryintermedia.com)
+<br/>Benjamin Scott
+<br/>Matt Coneybeare
+<br/>Tomasz Krasnyk
+<br/>Max Howell
+<br/>Peter Steinberger (@steipete)
+<br/>Tyler Hall
 <br/>
 <br/>      </p>
 
