--- a/index.html
+++ b/index.html
@@ -51,15 +51,20 @@
 
     <p>This class provides a custom iOS (iPhone + iPad) status bar overlay window known from Apps like Reeder, Google Mobile App or Evernote.
 It currently supports touch-handling, queuing of messages, delegation as well as three different animation modes:
- 
-* MTStatusBarOverlayAnimationShrink: When the user touches the overlay the overlay shrinks and only covers the battery-icon on the right side
-* MTStatusBarOverlayAnimationFallDown: When the user touches the overlay a detail view falls down where additional information can be displayed. You can get a history of all your displayed messages for free by enabling historyTracking!
-* MTStatusBarOverlayAnimationNone: Nothing happens, when the user touches the overlay
+ <ul>
+  <li> MTStatusBarOverlayAnimationShrink: When the user touches the overlay the overlay shrinks and only covers the battery-icon on the right side </li>
+  <li>MTStatusBarOverlayAnimationFallDown: When the user touches the overlay a detail view falls down where additional information can be displayed. You can get a history of all your displayed messages for free by enabling historyTracking! </li>
+  <li>MTStatusBarOverlayAnimationNone: Nothing happens, when the user touches the overlay</li>
 
-MTStatusBarOverlay currently fully supports two different status bar styles, which also can be changed in your app (MTStatusBarOverlay will adopt the style and will be updated the next time you show it):
+<p>MTStatusBarOverlay currently fully supports two different status bar styles, which also can be changed in your app (MTStatusBarOverlay will adopt the style and will be updated the next time you show it):
 
-* UIStatusBarStyleDefault
-* UIStatusBarStyleBlackOpaque</p><h2>License</h2>
+<ul>
+ <li>UIStatusBarStyleDefault </li>
+  <li>UIStatusBarStyleBlackOpaque </li>
+</ul>
+</p></p>
+
+<h2>License</h2>
 <p>MIT</p>
 <h2>Authors</h2>
 <p><b>Matthias Tretter (@myell0w)</b>
